--- a/17-17.Mai/content/auswertung.tex
+++ b/17-17.Mai/content/auswertung.tex
@@ -155,7 +155,29 @@ Dabei ist bei Natrium $n = 3$, bei Kalium $n = 4$ und bei Rubidium $n = 5$ und f
 \end{table}
 
 \subsection{Bestimmung der Distanz zwischen den Dublettlinien}
+Die Distanz der Dublettlinien ist in folgender Tabelle aufgeführt.
 
+\begin{table}[H]
+  \centering
+  \begin{tabular}{c c}
+    \toprule
+    & $\Delta s$ / $10^{-3}$ m \\
+    \hline
+    \multirow{3}*{Natrium} & 0.19 \\
+                           & 0.43 \\
+                           & 0.58 \\
+    \hline
+    \multirow{3}*{Kalium}  & 2.06 \\
+                           & 1.94 \\
+                           & 2.14 \\
+                           & 1.61 \\
+    \hline
+    Rubidium               & 7.01 \\
+    \hline
+  \end{tabular}
+  \caption{Die Distanz der Dublettlinien.}
+  \label{tab:}
+\end{table}
 
 
 
