--- a/17-17.Mai/content/auswertung.tex
+++ b/17-17.Mai/content/auswertung.tex
@@ -29,7 +29,7 @@ Die Gitterkonstante $g$ wird mit Hilfe einer linearen Regression der Gleichung \
 \begin{align*}
   k & = 1 \\
   b & = (\num{-6 +- 2}) \cdot 10^{-3} \\
-  \Rightarrow g & = (\num{9.81 +- 0.04}) \cdot 10^{-7} \text{m}
+  \Rightarrow g & = (\num{9.81 +- 0.04}) \cdot 10^{-7}\ \text{m}
 \end{align*}
 
 \begin{figure}[H]
@@ -178,20 +178,3 @@ Die Distanz der Dublettlinien ist in folgender Tabelle aufgeführt.
   \caption{Die Distanz der Dublettlinien.}
   \label{tab:}
 \end{table}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-a
