--- a/17-17.Mai/content/diskussion.tex
+++ b/17-17.Mai/content/diskussion.tex
@@ -1,2 +1,17 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+Die Gitterkonstante $g$ beträgt
+\begin{align*}
+  g = (\num{9.81 +- 0.04}) \cdot 10^{-7}\ \text{m} \ .
+\end{align*}
+Die Eichgröße $\Psi$ beträgt
+\begin{align*}
+  \Psi = (\num{9.827 +- 0.008}) \cdot 10^{-7}\ \frac{\text{m}}{\text{Skt}} \ .
+\end{align*}
+Die inneren Abschirmungszahlen $\sigma_2$ für die Alkali-Atome betragen
+\begin{align*}
+  \sigma_{2,\text{Na}} & = \num{10.82 +- 0.01} \\
+  \sigma_{2,\text{K}}  & = \num{18.808 +- 0.008} \\
+  \sigma_{2,\text{Rb}} & = 36.65
+\end{align*}
+Die ausgerechneten Werte für die Abschirmungszahlen liegen im erwarteten Bereich und haben im Mittel nur einen sehr kleinen Fehler. 
