--- a/16-10.Mai/lit.bib
+++ b/16-10.Mai/lit.bib
@@ -18,3 +18,10 @@
   year = 2016,
   address = {http://www-app3.gfz-potsdam.de/Declinationcalc/},
 }
+
+@manual{e0m0,
+  author = {NIST},
+  title = {Fundamental Physical Constants},
+  year = 2016,
+  address = {http://physics.nist.gov/cgi-bin/cuu/Value?esme},
+}
