--- a/18-24.Mai/main.tex
+++ b/18-24.Mai/main.tex
@@ -1,6 +1,6 @@
 \input{header.tex}
 
-\subject{Versuchs Nummer 601}
+\subject{Versuch Nummer 601}
 \title{Der Franck-Hertz-Versuch}
 \date{
   Durchführung: 24.05.2016
