--- a/18-24.Mai/content/theorie.tex
+++ b/18-24.Mai/content/theorie.tex
@@ -3,29 +3,70 @@ Das Ziel des Franck-Hertz-Versuches ist es die Energiedifferenz zwischen dem Gru
 
 \section{Theoretische Grundlage}
 \label{sec:Theorie}
-Der Franck-Hertz-Versuch wird in einem abgeschlossenen Gefäß durchgeführt. Darin befindet sich  werden Elektronen per Glühelektrischem Effekt aus einem Draht ausgelöst und durch eine Anode Beschleunigt.
+Der Franck-Hertz-Versuch wird in einem abgeschlossenen Gefäß durchgeführt. Darin befindet sich Gasförmiges Quecksilber, welches mit den Elektronen elastische und unelastische Stöße ausführt. Die unelastischen Stöße tretten immer dann auf, wenn das beschleunigte Elektron eine bestimmte Energie erreicht hat und mit einem Hg-Atom kollidiert. Dadurch wird das Hg-Atom von seinem Grundzustand in seinen ersten angeregten Zustand angehoben und die Energiedifferenz der beiden Zustände lässt sich über
+\begin{align}
+	\frac{m_0\, v_\text{vor}^2}{2} - \frac{m_0\, v_\text{nach}^2}{2} = E_1 - E_0
+\end{align}
+berechnen. Mit der Ruhemasse eines Elektrons $m_0$ und den Geschwindigkeiten $v_\text{vor}$ und $v_\text{nach}$. \\
+Die Energie der beschleunigten Elektronen vor dem kollidieren beträgt:
+\begin{align}
+	\frac{m_0\, v_\text{vor}^2}{2} = e_0\, U_\text{B}
+\end{align}
+Wobei $e_0$ der Elementarladung und $U_\text{B}$ der Beschleunigungsspannung entspricht. Dies gilt allerdings nur für Elektronen welche vorher keine kinetische Energie hatten. \\
+Nach der Beschleunigerelektrode kommt eine Auffängerelektrode, welche allerdings eine Bremsspannung $U_\text{A}$ zur Beschleunigerspannung aufbaut. Dadurch kommen nur Elektronen mit einer kinetischen Energie in z-Richtung zu der Auffängerelektrode, die die Ungleichung erfüllt:
+\begin{align}
+	\frac{m_0\, v_\text{z}^2}{2} \ge e_0\, U_\text{A} \ .
+\end{align}
+Der Rest der Elektronen kehrt zur Beschleunigungselektrode zurück. \\
+Im Beschleunigungsgebiet kollidieren die Elektronen und die Hg-Atome auf zwei verschiedene Arten: elastisch und unelastisch. Der Energieverlust bei den elastischen Stößen, die nur auftreten wenn das Elektron zu wenig Energie besitzt, kann vernachlässigt werden. Da das Massenverhältnis $\frac{m_0}{M}$ zwischen dem Elektron und dem Hg-Atom sehr klein ist. Bei den unelastischen Stößen hingegen ist die Energie der Elektronen $E$ größer als die Energiedifferenz $E_1 - E_0$. Bei diesen Stößen gibt das Elektron diese Energiediffernz an das Hg-Atom ab wodurch es in den ersten angeregten Zustand aufsteigt. Die überschüssige Energie bleibt bei dem Elektron. Daraufhin fällt das Hg-Atom wieder in den Grundzustand wodurch ein Lichquant emittiert wird welches die Energie
+\begin{align}
+	h\, \nu = E_1 - E_0
+\end{align}
+besitzt. wobei $h$ dem Planckschen Wirkungsquantum und $\nu$ der Frequenz der emittierten Strahlung entspricht. \\
+In Abbildung \eqref{fig:Kurvenverlauf} ist der ideelle Verlauf der Kurve von dem Strom $I_\text{A}$ und der Beschleunigungsspannung $U_\text{B}$ zu sehen.
 
+\begin{figure}[H]
+	\centering
+	\includegraphics[height=6cm]{picture/Kurvenverlauf}
+	\caption{Ideeller Kurvenverlauf von $U_\text{B}$ gegen $I_\text{A}$. \cite[4]{sample}}
+	\label{fig:Kurvenverlauf}
+\end{figure}
 
-Mit Hilfe des Franck-Hertz-Versuches kann die Struktur der Elektronenhülle eines Atoms untersucht werden. Der Franck-Hertz-Versuch gehört zu den Elektronenstoßexperimenten.
+Die Beschleunigerspannung wird nun gleichmäßig nach oben gedreht und sobald diese größer als die Bremsspannung ist wird an der Auffängerelektrode ein ansteigender Strom regestriert. Dieser Strom fällt allerdings abrupt ab sobald die Elektronen die Energiedifferenz $E_1 - E_0$ erreicht haben. Dies kann weitere male passieren wenn die Beschleunigerspannung groß genug ist. Die Distanz $U_1$ zwischen den Maximas der Kurve enspricht dem ersten Anregungspotential:
+\begin{align}
+	U_1 = \frac{E_1 - E_0}{e_0}
+\end{align}
+Der Kurvenverlauf aus Abbildung \eqref{fig:Kurvenverlauf} ist allerdings idealisiert und wird in der Praxis noch durch das Kontaktpotential, das Energie-Spektrum der Elektronen und den Dampfdruck beeinflusst. \\
+\textbf{Das Kontaktpotential} kommt durch die unterschiedlichen Austrittsarbeiten des Glühdrahtes und der Beschleunigerelektrode zustande.
 
+\begin{figure}[H]
+	\centering
+	\includegraphics[height=7cm]{picture/Kontakt}
+	\caption{Potentialverhältnisse zwischen Glühdraht und Beschleunigerelektrode. \cite[5]{sample}}
+	\label{fig:Kontakt}
+\end{figure}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+Aus Abbildung \eqref{fig:Kontakt} kann die effektive Beschleunigungsspannung $U_\text{B, eff}$ abgeleitet werden
+\begin{align*}
+	U_\text{B, eff} = U_\text{B} - K \ .
+\end{align*}
+Der Summand $K$ entspricht dabei dem Kontaktpotential und hat den Wert
+\begin{align*}
+	K = \frac{\Phi_\text{B} - \Phi_\text{G}}{e_0} \ ,
+\end{align*}
+wobei $\Phi_\text{B}$ der Austrittsarbeit der Beschleunigerelektrode und $\Phi_\text{G}$ der Austrittsarbeit des Glühdrahtes entspricht. Dadurch ist die Kurve um den Wert $K$ verschoben. \\
+Die bisherige Annahme das alle Elektronen mit der selben Energie aus dem Glühdraht austreten stimmt nicht. Stattdessen besitzen die Elektronen ein \textbf{Energie-Spektrum} mit welchem sie aus dem Glühdraht austreten. Dadurch gibt es nicht nur eine Beschleunigungsspannung bei der die Elektronen die richtige Energie haben sondern einen Bereich indem das zutrifft. Aus diesem Grund gibt es keinen instantanen Abfall sondern eine stetig abfallende Kurve. \\
+\textbf{Der Dampfdruck} beeinflusst die häufigkeit der Zusammenstöße zwischen den Elektronen und den Hg-Atomen. Der Dampfdruck darf nicht zu niedrieg sein, da sonst kaum Elektronen mit dem Gas wechselwirken würden und ungebremst zur Auffängerelektrode fliegen würden. Der Dampfdruck darf allerdings auch nicht zu hoch sein, da die Elektronen sonst zu oft mit dem Gas wechselwirken würden und garnicht mehr zur Auffängerelektrode gelangen würden. "Die mittlere freie Weglänge $\overline{w}$ der Atome muss klein gegen den Abstand $a$ zwischen Kathode und Beschleunigerelektrode sein" \cite[6]{sample}. Aus der Gastheorie folgt
+\begin{align*}
+	\overline{w} = \frac{0.0029}{p_\text{Sät}} \ . \\
+	(\overline{w}\, [\text{cm}],\, p_\text{Sät} = \text{Sättigungsdampfdruck}\, [mbar])
+\end{align*}
+Der Sättigungsdampfdruck lässt sich über
+\begin{align*}
+	p_\text{Sät}(T) = 5.5 \cdot 10^7 \cdot \exp(\frac{-6876}{T}) \\
+	(T = Temperatur\, [K])
+\end{align*}
+berechnen.
 
 
 
