--- a/16-10.Mai/content/diskussion.tex
+++ b/16-10.Mai/content/diskussion.tex
@@ -8,8 +8,8 @@ Die aus dem Versuch relevanten erechnete Messwerte sind in Tabelle \ref{tab:sum}
 	\multirow{2}{*}{Zu Messende Größe} & \multirow{2}{*}{Ermittelter Wert} & Relative Abweichung \\
 	& & vom Theoriewert \\
     \midrule
-     spezifische Ladung & $(\num{1.77 +- 0.02})10^{11}$ C/kg & 1 \%	\\
-     Erdmagnetfeld 	  &  4.34 \cdot $10^{-5}$ T       & 11 \% 	\\
+    spezifische Ladung & $(\num{1.77 +- 0.02})10^{11}$ C/kg & 1 \% \cite{e0m0} 	\\
+    Erdmagnetfeld 	  &  4.34 \cdot $10^{-5}$ T       & 11 \% \cite{spez}  	\\
      Kenngröße der Braunsche Röhre& $(\num{0.27 +- 0.01}) \frac{1}{m}$ & 19 \% \\
      Frequenz der Sinusspannung& $(\num{79.81 +- 0.05})$ Hz & 0.2 \% \\
      Scheitelwert der Sinusspannung& $ (\num{6.0 +- 0.2}) V $& / \\
