--- a/16-10.Mai/content/theorie.tex
+++ b/16-10.Mai/content/theorie.tex
@@ -1,14 +1,14 @@
 \section{Zielsetzung}
-In den beiden folgenden Experimenten soll die Ablenkung von Elektronen im elektrischen und magnetischen Feld untersucht werden. Außerdem soll die Stärke des Erdmagnetfeldes bestimmt werden.
+In den beiden folgenden Experimenten soll die Ablenkung von Elektronen im elektrischen und magnetischen Feld untersucht werden. Außerdem soll die Stärke des Erdmagnetfeldes und die spezifische Masse eines Elektrons bestimmt werden und zu letzt soll die Empfindlichkeit einer Kathodenstrahlröhre untersucht werden.
 
 \section{Theoretische Grundlage}
 \label{sec:Theorie}
 \subsection{Aufbau der Kathodenstrahlröhre}
-Die beiden Versuche werden in einem Hochvakuum durchgeführt, da die Elektronen sonst mit den Luftmolekülen wechselwirken würden. Dazu wird die Kathodenstrahlröhre (Braunsche Röhre) verwendet. Diese besteht aus drei Hauptkomponenten: der Elektronenkanone, einem Ablenksystem und einem Nachweissystem.\\
-\textbf{Die Elektronenkanone} erzeugt freie Elektronen durch Glühemission und beschleunigt diese. Dazu wird ein Kathode indirekt beheizt und von dem Wehnelt-Zylinder umgeben, welcher die Intensität des Elektronenstrahls steuert. Die Elektronen werden durch die nachfolgenden Elektroden beschleunigt und Fokussiert. \\
-\textbf{Das Ablenksystem} besteht aus zwei, zueinander parallelen Kondensatorplatten, welche ein annähernd homogenes elektrisches Feld erzeugen in dem die Elektronen abgelenkt werden. Sollen die Elektronen in eine weitere Richtung abgelenkt werden wird ein weiteres Plattenpaar um 90 Grad versetzt eingebaut. \\
-\textbf{Das Nachweissystem} visualisiert den auftrefenden Elektronenstrahl.\\
-In der nachfolgenden Abbildung wird der Sachverhalt verdeutlicht.
+Die beiden Versuche werden in einem vakuumierten Glasbehälter durchgeführt, da die Elektronen sonst mit den Luftmolekülen wechselwirken würden. Dazu wird die Kathodenstrahlröhre (Braunsche Röhre) verwendet. Diese besteht aus drei Hauptkomponenten: der Elektronenkanone, einem Ablenksystem und einem Nachweissystem.\\
+\textbf{Die Elektronenkanone} erzeugt freie Elektronen durch Glühemission und beschleunigt diese. Dazu wird ein Kathode indirekt beheizt und von dem Wehnelt-Zylinder umgeben. Mit diesem kann die Intensität des Elektronenstrahls gesteuert werden. Die Elektronen werden durch die nachfolgenden Elektroden beschleunigt und fokussiert. \\
+\textbf{Das Ablenksystem} besteht aus zwei, zueinander parallelen Kondensatorplatten, welche ein annähernd homogenes elektrisches Feld erzeugen in dem die Elektronen abgelenkt werden. \\
+\textbf{Das Nachweissystem} ist ein Leuchtschirm, welcher den auftrefenden Elektronenstrahl visualisiert.\\
+In der Abbildung \eqref{fig:Kathode} wird der Sachverhalt verdeutlicht.
 
 \begin{figure}[H]
 	\centering
@@ -18,19 +18,19 @@ In der nachfolgenden Abbildung wird der Sachverhalt verdeutlicht.
 \end{figure}
 
 \subsection{Ablenkung von Elektronen im E-Feld}
-Zwischen dem Wehnelt-Zylinder und den Beschleunigerelektroden liegt eine hohe Spannung $U_\text{B}$ an, sodass die Elektronen beschleunigt werden. Aus der Energieerhaltung folgt:
+Zwischen der Glühkathode und den Beschleunigerelektroden liegt eine hohe Spannung $U_\text{B}$ an, sodass die Elektronen beschleunigt werden. Aus der Energieerhaltung folgt:
 \begin{equation}
 	\frac{m_0 v^2}{2} = e_0 U_\text{B}
 \end{equation}
 mit der Elementarladung $e_0$, der Elektronenmasse $m_0$ und der Geschwindigkeit $v$. \\
-Durch das ändern der Kondensatorspannung wird die Ablenkung des Elektronenstrahls vergößert oder verkleinert. Diese Ablenkung hängt von der Feldstärke $E$ und der Elektronengeschwindigkeit $v$ ab. Außerdem wird angenommen, dass der Plattenabstand $d$ viel kleiner als die Plattenlänge $p$ ist, somit gilt:
+Durch das ändern der Kondensatorspannung wird die Ablenkung des Elektronenstrahls vergrößert oder verkleinert. Diese Ablenkung hängt von der Feldstärke $E$ und der Elektronengeschwindigkeit $v$ ab. Außerdem wird angenommen, dass der Plattenabstand $d$ viel kleiner als die Plattenlänge $p$ ist, somit gilt:
 \begin{align*}
 	E = \frac{U_\text{d}}{d}
 \end{align*}
 wobei $U_\text{d}$ der Ablenkspannung entspricht. \\
 Unter Betrachtung der Geschwindigkeitskomponenten, dem Winkel $\theta$ der Richtungsänderung und der Abbildung \eqref{fig:AblenkungE} ergibt sich für die Verschiebung $D$:
 \begin{equation}
-	D = L\theta = \frac{p L U_\text{d}}{2 d U_\text{B}} \propto U_\text{d}
+	D = L\theta = \frac{p L U_\text{d}}{2 d U_\text{B}}
 	\label{eqn:DUd}
 \end{equation}
 Mit dem Abstand $L$ zwischen Kondensator und Nachweissystem. \\
@@ -56,7 +56,10 @@ Es wird also nur eine Kraft auf die Ladung ausgeübt wenn es eine Geschwindigkei
 	r = \frac{m_0 v_0}{e_0 B}
 	\label{eqn:r}
 \end{equation}
-Mit $e_0$ als Elementarladung und $m_0$ als Elektronenmasse. \\
+Mit $e_0$ als Elementarladung und $m_0$ als Elektronenmasse. Die Zentrifugalkraft ist gleich
+\begin{align*}
+	\frac{m_0\, v^2}{r} \ .
+\end{align*}
 
 \begin{figure}[H]
 	\centering
@@ -73,7 +76,7 @@ Mit $v_0 = \sqrt{2 U_\text{B} \frac{e_0}{m_0}}$ und der Abbildung \eqref{fig:Abl
 Mit der Verschiebung $D$ und dem Wirkungsbereich $L$ des Magnetfeldes.
 
 \subsection{Magnetfeld einer Helmholtzspule}
-Eine Helmholtzspule wird oft verwendet wenn ein annähernd homogenes Magnetfeld benötigt wird. Sie besteht aus zwei Ringspulen, mit dem Radius $R$ und der Windungszahl $N$, welche parallel zueinander aufgebaut sind. Das Magnetfeld einer Helmholtzspule lässt sich aus
+Eine Helmholtzspule wird oft verwendet wenn ein annähernd homogenes Magnetfeld benötigt wird. Sie besteht aus zwei Ringspulen, mit jeweils dem Radius $R$ und der Windungszahl $N$, welche parallel zueinander aufgebaut sind. Das Magnetfeld einer Helmholtzspule lässt sich aus
 \begin{center}
 	\begin{align}
 		B = \mu_0 \frac{8}{\sqrt{125}} \frac{N I}{R}
@@ -83,8 +86,11 @@ Eine Helmholtzspule wird oft verwendet wenn ein annähernd homogenes Magnetfeld 
 \end{center}
 berechnen.
 
+\subsection{Erdmagnetfeld}
+Die Erde besitzt ein Magnetfeld, welches vom geographischen Südpol zum Nordpol verläuft. Der Winkel unter welchem die magnetischen Feldlinien in die Erdoberfläche eintreten wird als Inklinationswinkel bezeichnet.
+
 \subsection{Fehlerrechnung}
-Sämtliche Fehlerrechnungen werden mit Hilfe von Python 3.4.3 durchgeführt.
+Sämtliche Fehlerrechnungen werden mit Hilfe des Paketes "uncertainties" von Python 3.4.3 durchgeführt.
 \subsubsection{Mittelwert}
 Der Mittelwert einer Messreihe $x_\text{1}, ... ,x_\text{n}$ lässt sich durch die Formel
 \begin{equation}
@@ -104,17 +110,5 @@ Wenn $x_\text{1}, ..., x_\text{n}$ fehlerbehaftete Messgrößen im weiteren Verl
 	\label{eqn:var}
 \end{equation}
 
-\subsubsection{Lineare Regression}
-Die Steigung und y-Achsenabschnitt einer Ausgleichsgeraden werden gegebenfalls mittels Linearen Regression berechnet.
-\begin{equation}
-	y = m \cdot x + b
-	\label{eqn:reg}
-\end{equation}
-\begin{equation}
-	m = \frac{ \overline{xy} - \overline{x} \overline{y} } {\overline{x^2} - \overline{x}^2}
-	\label{eqn:reg_m}
-\end{equation}
-\begin{equation}
-	b = \frac{ \overline{x^2}\overline{y} - \overline{x} \, \overline{xy}} { \overline{x^2} - \overline{x}^2}
-	\label{eqn:reg_b}
-\end{equation}
+\subsubsection{Regression}
+Sämtliche Regressionen werden mit Hilfe der Funktion "scipy.optimize.curve_fit" ausgeführt.
