--- a/16-10.Mai/content/theorie.tex
+++ b/16-10.Mai/content/theorie.tex
@@ -4,7 +4,7 @@ In den beiden folgenden Experimenten soll die Ablenkung von Elektronen im elektr
 \section{Theoretische Grundlage}
 \label{sec:Theorie}
 \subsection{Aufbau der Kathodenstrahlröhre}
-Die beiden Versuche werden in einem vakuumierten Glasbehälter durchgeführt, da die Elektronen sonst mit den Luftmolekülen wechselwirken würden. Dazu wird die Kathodenstrahlröhre (Braunsche Röhre) verwendet. Diese besteht aus drei Hauptkomponenten: der Elektronenkanone, einem Ablenksystem und einem Nachweissystem.\\
+Die beiden Versuche werden in einem evakuierten Glasbehälter durchgeführt, da die Elektronen sonst mit den Luftmolekülen wechselwirken würden. Dazu wird die Kathodenstrahlröhre (Braunsche Röhre) verwendet. Diese besteht aus drei Hauptkomponenten: der Elektronenkanone, einem Ablenksystem und einem Nachweissystem.\\
 \textbf{Die Elektronenkanone} erzeugt freie Elektronen durch Glühemission und beschleunigt diese. Dazu wird ein Kathode indirekt beheizt und von dem Wehnelt-Zylinder umgeben. Mit diesem kann die Intensität des Elektronenstrahls gesteuert werden. Die Elektronen werden durch die nachfolgenden Elektroden beschleunigt und fokussiert. \\
 \textbf{Das Ablenksystem} besteht aus zwei, zueinander parallelen Kondensatorplatten, welche ein annähernd homogenes elektrisches Feld erzeugen in dem die Elektronen abgelenkt werden. \\
 \textbf{Das Nachweissystem} ist ein Leuchtschirm, welcher den auftrefenden Elektronenstrahl visualisiert.\\
