--- a/18-24.Mai/content/auswertung.tex
+++ b/18-24.Mai/content/auswertung.tex
@@ -1,3 +1,18 @@
 \section{Auswertung}
 \label{sec:Auswertung}
-
+Für die weitere Versuchsauswertung wird zunächst die mittelere freie Wellenlänge für die verwendeten Temperaturen nach Gleichung \ref{eqn:} und \ref{eqn:} ausgerechnet. Die freien Wellenlängen und das Verhältnis des Abstandes zwischen Kathode-Beschleunigungselektrode $a$ zur freien Wellenlänge $w$ sind in Tabelle \ref{tab:} aufgeführt. 
+\begin{table}
+  \centering
+  \begin{tabular}{c c c}
+    \toprule
+    	Temperatur $T$ / °C & mittelere Wellenlänge $w$ / m & Verhältnis \frac{a}{w} \\
+    \midrule
+    	27  & $4.74 \cdot 10^{-3}$	& 2			\\
+      	105 & $4.19 \cdot 10^{-5}$	& 2 \cdot $10^2$	\\
+	140 & $8.96 \cdot 10^{-6}$	& 1 \cdot $10^3$	\\
+	180 & $2.06 \cdot 10^{-6}$	& 5 \cdot $10^3$	\\
+	190 & $1.49 \cdot 10^{-6}$	& 6 \cdot $10^3$	\\
+  \end{tabular}
+  \caption{<+Caption text+>}
+  \label{tab:<+label+>}
+\end{table}<++>
