unnötige Fehler suchen

--- a/16-10.Mai/content/theorie.tex
+++ b/16-10.Mai/content/theorie.tex
@@ -111,4 +111,4 @@ Wenn $x_\text{1}, ..., x_\text{n}$ fehlerbehaftete Messgrößen im weiteren Verl
 \end{equation}
 
 \subsubsection{Regression}
-Sämtliche Regressionen werden mit Hilfe der Funktion "scipy.optimize.curve_fit" ausgeführt.
+Sämtliche Regressionen werden mit Hilfe der Funktion $"scipy.optimize.curve_fit"$ ausgeführt.
