--- a/18-24.Mai/content/auswertung.tex
+++ b/18-24.Mai/content/auswertung.tex
@@ -21,7 +21,7 @@ Für die weitere Versuchsauswertung wird zunächst die mittelere freie Wellenlä
 \subsection{Differentielle Energieverteilung}
 Als erstes wird die Skalierung der x-Achse für die Graphen bei 27 und 140 °C bestimmt. Der Graph welcher bei 27 °C aufgezeichnet wurde, weist eine Distanz von 21 cm auf zwischen dem x-Achsen Punkt von 0 bis 10 Volt auf. Somit ergibt sich für die Länge eines cm Kästchen $K$ eine Spannung von 
 \begin{equation}
-  K1_\text{cm} = 0.476 V . 
+  K1_\text{cm} = 0.476 \, \text{V} \ . 
   \label{eqn:K1}
 \end{equation}
 Für den Graphen bei 140 °C wird eine Stecke von 20.7 cm ausgemessen und ein Kästchenmaßstab von 
