--- a/18-24.Mai/lit.bib
+++ b/18-24.Mai/lit.bib
@@ -5,3 +5,21 @@
   month = 05,
   address = {http://129.217.224.2/HOMEPAGE/PHYSIKER/BACHELOR/AP/SKRIPT/V601.pdf},
 }
+
+@manual{EIo,
+  author = {Periodensystem.info},
+  title = {Quecksilber},
+  year = 2016,
+  month = 05,
+  address = {http://www.periodensystem.info/elemente/quecksilber/},
+}
+
+@manual{Ea,
+  author = {Universität Wuppertal},
+  title = {Franck-Hertz-Versuch},
+  year = 2016,
+  month = 05,
+  address = {http://hydrogen.physik.uni-wuppertal.de/hyperphysics/hyperphysics/hbase/frhz.html},
+}
+
+
