--- a/18-24.Mai/content/diskussion.tex
+++ b/18-24.Mai/content/diskussion.tex
@@ -1,2 +1,15 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+Beide Kontaktpotentiale weiche voneinander um 30 \% von einander ab. Das gemittelte Kontaktpotential beträgt 
+\begin{equation}
+  K = 1.81 \, \text{V} \ . 
+\end{equation}
+Über den Fehler kann keine Aussage getroffen werden, da kein Literaturwert bekannt ist. Die ermittelte Anregungsenergie beträgt 
+\begin{equation}
+  U = 4.79 \, \text{eV} \ ,
+\end{equation}
+was einer Abweichung von 2\% vom Literaturwert \cite{Ea} beträgt. Die Ermittelte Ionisierugsenergie ist
+\begin{equation}
+  E_\text{Io} = 9.99 \, \text{eV} \ .
+\end{equation}
+Dies entspricht einer Abweichung von 4 \% vom Literaturwert \cite{EIo} entspricht.
