--- a/18-24.Mai/content/theorie.tex
+++ b/18-24.Mai/content/theorie.tex
@@ -4,7 +4,7 @@ Das Ziel des Franck-Hertz-Versuches ist es die Energiedifferenz zwischen dem Gru
 \section{Theoretische Grundlage}
 \label{sec:Theorie}
 \subsection{Aufbau des Franck-Hertz-Versuches}
-Der Franck-Hertz-Versuch wird in einem evakuierten Glasbehälter durchgeführt, in dem sich ein Glühdraht, eine Beschleunigerelektrode und eine Auffängerelektrode befindet (siehe Abbildung \eqref{fig:Apparatur}). Außerdem befindet sich ein Tropfen Quecksilber, welcher bei Raumtemperatur nur zu einem teil Gasförmig ist und bei steigender Temperatur weiter verdampft. Der Glühdraht wird zur Erzeugung von freien Elektronen verwendet und zwischen dem Glühdraht und der Beschleunigerelektrode liegt die Beschleunigungsspannung $U_\text{B}$ an. Diese Spannung beschleunigt die freien Elektronen in die Richtung der Auffängerelektrode. Die Bremsspannung $U_\text{A}$ liegt zwischen der Auffängerelektrode und der Beschleunigerelektrode an. Die Brems- und die Beschleunigungsspannung können sepparat voneinander durch jeweils eine Gleichspannungsquelle geregelt werden. Außerdem wird die Heizspannung auf einen konstanten Wert eingestellt.
+Der Franck-Hertz-Versuch wird in einem evakuierten Glasbehälter durchgeführt, in dem sich ein Glühdraht, eine Beschleunigerelektrode und eine Auffängerelektrode befindet (siehe Abbildung \eqref{fig:Apparatur}). Außerdem befindet sich ein Tropfen Quecksilber, welcher bei Raumtemperatur nur zu einem teil Gasförmig ist und bei steigender Temperatur weiter verdampft, in dem Behälter. Der Glühdraht wird zur Erzeugung von freien Elektronen verwendet und zwischen dem Glühdraht und der Beschleunigerelektrode liegt die Beschleunigungsspannung $U_\text{B}$ an. Diese Spannung beschleunigt die freien Elektronen in die Richtung der Auffängerelektrode. Die Bremsspannung $U_\text{A}$ liegt zwischen der Auffängerelektrode und der Beschleunigerelektrode an. Die Brems- und die Beschleunigungsspannung können sepparat voneinander durch jeweils eine Gleichspannungsquelle geregelt werden. Außerdem wird die Heizspannung auf einen konstanten Wert eingestellt.
 
 \begin{figure}[H]
   \centering
@@ -14,24 +14,24 @@ Der Franck-Hertz-Versuch wird in einem evakuierten Glasbehälter durchgeführt, 
 \end{figure}
 
 \subsection{Theorie}
-Die beschleunigten Elektronen führen elastische und unelastische Stöße mit den Hg-Atomen aus. Die unelastischen Stöße tretten immer dann auf, wenn das beschleunigte Elektron eine bestimmte Energie überschritten hat und dann mit einem Hg-Atom kollidiert. Dadurch wird das Hg-Atom von seinem Grundzustand in seinen ersten angeregten Zustand angehoben und die Energiedifferenz der beiden Zustände lässt sich über
-\begin{align}
+Die beschleunigten Elektronen führen elastische und unelastische Stöße mit den Hg-Atomen aus. Die unelastischen Stöße treten immer dann auf, wenn das beschleunigte Elektron eine bestimmte Energie überschreitet und mit einem Hg-Atom zusammen stößt. Dadurch wird das Hg-Atom von seinem Grundzustand in seinen ersten angeregten Zustand angehoben und die Energiedifferenz der beiden Zustände lässt sich über
+\begin{equation}
 	\frac{m_0\, v_\text{vor}^2}{2} - \frac{m_0\, v_\text{nach}^2}{2} = E_1 - E_0
-\end{align}
+\end{equation}
 berechnen. Mit der Ruhemasse eines Elektrons $m_0$ und den Geschwindigkeiten $v_\text{vor}$ und $v_\text{nach}$. Die Energie der beschleunigten Elektronen vor dem kollidieren beträgt:
-\begin{align}
+\begin{equation}
 	\frac{m_0\, v_\text{vor}^2}{2} = e_0\, U_\text{B}
-\end{align}
+\end{equation}
 Wobei $e_0$ der Elementarladung und $U_\text{B}$ der Beschleunigungsspannung entspricht. Dies gilt allerdings nur für Elektronen welche vorher keine kinetische Energie hatten. \\
-Nach der Beschleunigerelektrode kommt eine Auffängerelektrode, welche eine Bremsspannung $U_\text{A}$ zur Beschleunigerspannung aufbaut. Dadurch kommen nur Elektronen mit einer kinetischen Energie in z-Richtung zu der Auffängerelektrode, die die Ungleichung erfüllen:
-\begin{align}
+Nach der Beschleunigerelektrode kommt eine Auffängerelektrode, zwischen diesen beiden liegt die Bremsspannung $U_\text{A}$ an. Dadurch kommen nur Elektronen mit einer kinetischen Energie in z-Richtung zu der Auffängerelektrode, die die Ungleichung erfüllen:
+\begin{equation}
 	\frac{m_0\, v_\text{z}^2}{2} \ge e_0\, U_\text{A} \ .
-\end{align}
+\end{equation}
 Der Rest der Elektronen kehrt zur Beschleunigungselektrode zurück. \\
-Im Beschleunigungsgebiet kollidieren die Elektronen und die Hg-Atome auf zwei verschiedene Arten: elastisch und unelastisch. Der Energieverlust bei den elastischen Stößen, die nur auftreten wenn das Elektron zu wenig Energie besitzt, kann vernachlässigt werden, da das Massenverhältnis $\frac{m_0}{M}$ zwischen dem Elektron und dem Hg-Atom sehr klein ist. Bei den unelastischen Stößen hingegen ist die Energie der Elektronen $E$ größer als die Energiedifferenz $E_1 - E_0$. Bei diesen Stößen gibt das Elektron diese Energiediffernz an das Hg-Atom ab wodurch es in den ersten angeregten Zustand aufsteigt. Die überschüssige Energie bleibt bei dem Elektron. Nach $10^{-8}$ sec fällt das Hg-Atom wieder in den Grundzustand wodurch ein Lichquant emittiert wird welches die Energie
-\begin{align}
+Im Beschleunigungsgebiet kollidieren die Elektronen und die Hg-Atome auf zwei verschiedene Arten: elastisch und unelastisch. Der Energieverlust bei den elastischen Stößen, die nur auftreten wenn das Elektron zu wenig Energie besitzt, kann vernachlässigt werden, da das Massenverhältnis $\frac{m_0}{M}$ zwischen dem Elektron und dem Hg-Atom sehr klein ist. Bei den unelastischen Stößen hingegen ist die Energie der Elektronen $E$ größer oder gleich der Energiedifferenz $E_1 - E_0$. Bei diesen Stößen gibt das Elektron diese Energiediffernz an das Hg-Atom ab wodurch es in den ersten angeregten Zustand aufsteigt. Die überschüssige Energie bleibt bei dem Elektron. Nach $10^{-8}$\,s fällt das Hg-Atom wieder in den Grundzustand wodurch ein Lichquant emittiert wird, welches die Energie
+\begin{equation}
 	h\, \nu = E_1 - E_0
-\end{align}
+\end{equation}
 besitzt. wobei $h$ dem Planckschen Wirkungsquantum und $\nu$ der Frequenz der emittierten Strahlung entspricht. \\
 In Abbildung \eqref{fig:Kurvenverlauf} ist der ideelle Verlauf der Kurve von dem Strom $I_\text{A}$ und der Beschleunigungsspannung $U_\text{B}$ zu sehen.
 
@@ -43,9 +43,9 @@ In Abbildung \eqref{fig:Kurvenverlauf} ist der ideelle Verlauf der Kurve von dem
 \end{figure}
 
 Die Beschleunigerspannung wird nun gleichmäßig nach oben gedreht und sobald diese größer als die Bremsspannung ist wird an der Auffängerelektrode ein ansteigender Strom registriert. Dieser Strom fällt allerdings abrupt ab sobald die Elektronen die Energiedifferenz $E_1 - E_0$ erreicht haben. Dies kann weitere male passieren wenn die Beschleunigerspannung groß genug ist. Die Distanz $U_1$ zwischen den Maxima der Kurve enspricht dem ersten Anregungspotential:
-\begin{align}
+\begin{equation}
 	U_1 = \frac{E_1 - E_0}{e_0}
-\end{align}
+\end{equation}
 Der Kurvenverlauf aus Abbildung \eqref{fig:Kurvenverlauf} ist allerdings idealisiert und wird in der Praxis noch durch das Kontaktpotential, das Energie-Spektrum der Elektronen und den Dampfdruck beeinflusst. \\
 \textbf{Das Kontaktpotential} kommt durch die unterschiedlichen Austrittsarbeiten des Glühdrahtes und der Beschleunigerelektrode zustande.
 
@@ -57,25 +57,25 @@ Der Kurvenverlauf aus Abbildung \eqref{fig:Kurvenverlauf} ist allerdings idealis
 \end{figure}
 
 Aus Abbildung \eqref{fig:Kontakt} kann die effektive Beschleunigungsspannung $U_\text{B, eff}$ abgeleitet werden
-\begin{align*}
+\begin{equation*}
 	U_\text{B, eff} = U_\text{B} - K \ .
-\end{align*}
+\end{equation*}
 Der Summand $K$ entspricht dabei dem Kontaktpotential und hat den Wert
-\begin{align*}
+\begin{equation*}
 	K = \frac{\Phi_\text{B} - \Phi_\text{G}}{e_0} \ ,
-\end{align*}
+\end{equation*}
 wobei $\Phi_\text{B}$ der Austrittsarbeit der Beschleunigerelektrode und $\Phi_\text{G}$ der Austrittsarbeit des Glühdrahtes entspricht. Dadurch ist die Kurve um den Wert $K$ verschoben. \\
 Die bisherige Annahme das alle Elektronen mit der selben Energie aus dem Glühdraht austreten stimmt nicht. Stattdessen besitzen die Elektronen ein \textbf{Energie-Spektrum} mit welchem sie aus dem Glühdraht austreten. Dadurch gibt es nicht nur eine Beschleunigungsspannung bei der die Elektronen die richtige Energie haben sondern einen Bereich indem das zutrifft. Aus diesem Grund gibt es nach dem Maximum keinen instantanen Abfall sondern eine stetig abfallende Kurve. \\
 \textbf{Der Dampfdruck} beeinflusst die häufigkeit der Zusammenstöße zwischen den Elektronen und den Hg-Atomen. Der Dampfdruck darf nicht zu niedrieg sein, da sonst kaum Elektronen mit dem Gas wechselwirken würden und ungebremst zur Auffängerelektrode fliegen könnten. Allerdings darf der Dampfdruck auch nicht zu hoch sein, da die Elektronen sonst zu oft mit dem Gas wechselwirken würden und garnicht mehr zur Auffängerelektrode gelangen würden. "Die mittlere freie Weglänge $\overline{w}$ der Atome muss klein gegen den Abstand $a$ zwischen Kathode und Beschleunigerelektrode sein" \cite[6]{sample}. Aus der Gastheorie folgt
-\begin{align*}
+\begin{equation*}
 	\overline{w} = \frac{0.0029}{p_\text{Sät}} \ . \\
 	(\overline{w}\, [\text{cm}],\, p_\text{Sät} = \text{Sättigungsdampfdruck}\, [mbar])
-\end{align*}
+\end{equation*}
 Der Sättigungsdampfdruck lässt sich über
-\begin{align*}
+\begin{equation*}
 	p_\text{Sät}(T) = 5.5 \cdot 10^7 \cdot \exp(\frac{-6876}{T}) \\
 	(T = Temperatur\, [K])
-\end{align*}
+\end{equation*}
 berechnen.
 
 
