--- a/18-24.Mai/content/auswertung.tex
+++ b/18-24.Mai/content/auswertung.tex
@@ -1,6 +1,6 @@
 \section{Auswertung}
 \label{sec:Auswertung}
-Für die weitere Versuchsauswertung wird zunächst die mittelere freie Wellenlänge für die verwendeten Temperaturen nach Gleichung \ref{eqn:} und \ref{eqn:} ausgerechnet. Die freien Wellenlängen und das Verhältnis des Abstandes zwischen Kathode-Beschleunigungselektrode $a$ zur freien Wellenlänge $w$ sind in Tabelle \ref{tab:mitWel} aufgeführt.
+Für die weitere Versuchsauswertung wird zunächst die mittelere freie Wellenlänge für die verwendeten Temperaturen nach Gleichung \ref{eqn:w} und \ref{eqn:p} ausgerechnet. Die freien Wellenlängen und das Verhältnis des Abstandes zwischen Kathode-Beschleunigungselektrode $a$ zur freien Wellenlänge $w$ sind in Tabelle \ref{tab:mitWel} aufgeführt.
 \begin{table}
   \centering
   \begin{tabular}{c c c}
@@ -122,7 +122,7 @@ Aus dem gemittelten Anregungsenergie ergibt sich nach umstellen der Formel \ref{
   \lambda = \frac{c \cdot h \cdot e_0}{\overline{U}} = 259 \, \text{nm} \ .
   \label{eqn:spek}
 \end{equation}
-Somit liegt das Spektrum im Ultravioletten bereich und ist nicht für das Auge Sichtbar. Das erste Maximum wird bei einer Spannung von $U_{1 \text{Max}}$ = 6.80 V abgelesen. Aus Gleichung \ref{eqn:} folgt ein Kontaktpotential
+Somit liegt das Spektrum im Ultravioletten bereich und ist nicht für das Auge Sichtbar. Das erste Maximum wird bei einer Spannung von $U_{1 \text{Max}}$ = 6.80 V abgelesen. Aus Gleichung \ref{eqn:K} folgt ein Kontaktpotential
 \begin{equation}
   K = 2.04 \, \text{V} \ .
   \label{eqn:KonFr}
